Update permission status from query after callback returned.
As an alternative way to keep track of permissions.

--- a/permission-status/index.html
+++ b/permission-status/index.html
@@ -23,8 +23,12 @@
     <button id="geolocation">
       Geolocation
       <div class="permission-status">
-        Permission status:
+        Permission status (from event):
         <span id="geolocation-permission-status">⚫️ N/A</span>
+      </div>
+      <div class="permission-status">
+        Permission status (from query):
+        <span id="geolocation-permission-status-query">⚫️ N/A</span>
       </div>
       <div class="access-status">
         Access status: <span id="geolocation-access-status">⚫️ unknown</span>
