Also add permission status from query to other capabilities.

--- a/permission-status/index.html
+++ b/permission-status/index.html
@@ -40,7 +40,12 @@
     <button id="camera">
       Camera
       <div class="permission-status">
-        Permission status: <span id="camera-permission-status">⚫️ N/A</span>
+        Permission status (from event):
+        <span id="camera-permission-status">⚫️ N/A</span>
+      </div>
+      <div class="permission-status">
+        Permission status (from query):
+        <span id="camera-permission-status-query">⚫️ N/A</span>
       </div>
       <div class="access-status">
         Access status: <span id="camera-access-status">⚫️ unknown</span>
@@ -52,8 +57,12 @@
     <button id="microphone">
       Microphone
       <div class="permission-status">
-        Permission status:
+        Permission status (from event):
         <span id="microphone-permission-status">⚫️ N/A</span>
+      </div>
+      <div class="permission-status">
+        Permission status (from query):
+        <span id="microphone-permission-status-query">⚫️ N/A</span>
       </div>
       <div class="access-status">
         Access status: <span id="microphone-access-status">⚫️ unknown</span>
@@ -65,8 +74,12 @@
     <button id="camera-microphone">
       Camera + Microphone
       <div class="permission-status">
-        Permission status:
+        Permission status (from event):
         <span id="camera-microphone-permission-status">⚫️ N/A</span>
+      </div>
+      <div class="permission-status">
+        Permission status (from query):
+        <span id="camera-microphone-permission-status-query">⚫️ N/A</span>
       </div>
       <div class="access-status">
         Access status:
