Rename to literal method name 'Show ...'

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <button id="eme">Encrypted Media (EME)</button>
     <button id="idle-detection">Idle Detection</button>
     <button id="persistent-storage">Persistent Storage</button>
-    <button id="open-file-picker">Open File Picker</button>
-    <button id="open-directory-picker">Open Directory Picker</button>
+    <button id="show-open-file-picker">Show Open File Picker</button>
+    <button id="show-directory-picker">Show Directory Picker</button>
     <button id="protocol-handler">Protocol Handler</button>
     <button id="webauthn-attestation">WebAuthn Attestation</button>
     <button id="nfc">NFC</button>
