--- a/geolocation_element.html
+++ b/geolocation_element.html
@@ -16,9 +16,9 @@
       <h2>1. Manual Location Request</h2>
       <p>Click the element below to request the current location.</p>
       <geolocation id="geo-manual" tabindex="0">
-        Geolocation element is not reported
+        Geolocation element is not supported
       </geolocation>
-      <div id="manual-output" class="output">Waiting for user interaction...</div>
+      <div id="manual-output" class="geolocation-event-logger">Waiting for user interaction...</div>
 
       <h2>2. Automatic Location Request</h2>
       <p>
@@ -27,9 +27,19 @@
         already allows it.
       </p>
       <geolocation id="geo-auto" autolocate tabindex="0">
-        Geolocation element is not reported
+        Geolocation element is not supported
       </geolocation>
-      <div id="auto-output" class="output">Waiting for permission...</div>
+      <div id="auto-output" class="geolocation-event-logger">Waiting for permission...</div>
+
+      <h2>3. Watch Location</h2>
+      <p>
+        This element has the <code>watch</code> attribute and will continuously
+        report location updates as they occur.
+      </p>
+      <geolocation id="geo-watch" watch tabindex="0">
+        Geolocation watch element is not supported
+      </geolocation>
+      <div id="watch-output" class="geolocation-event-logger">Waiting for location updates...</div>
       
       <div class="instructions">
         <h3>Demo Instructions</h3>
@@ -58,8 +68,10 @@
       // Get references to the DOM elements
       const manualGeoElement = document.getElementById('geo-manual');
       const autoGeoElement = document.getElementById('geo-auto');
+      const watchGeoElement = document.getElementById('geo-watch');
       const manualOutputDiv = document.getElementById('manual-output');
       const autoOutputDiv = document.getElementById('auto-output');
+      const watchOutputDiv = document.getElementById('watch-output');
 
       /**
        * A helper function to create a formatted log string from a location event.
@@ -91,6 +103,20 @@
       // Assign a specific handler for the automatic element
       autoGeoElement.onlocation = function(event) {
         autoOutputDiv.innerHTML = createLogEntry(event);
+      };
+
+      // Assign a handler for the watch element that accumulates updates
+      watchGeoElement.onlocation = function(event) {
+        // Convert newlines to <br> for HTML display and prepend the newest entry.
+        const entryHtml = '<div class="log-entry">' +
+                          createLogEntry(event).replace(/\n/g, '<br>') +
+                          '</div>';
+        // If this is the first real update, replace the placeholder text.
+        if (watchOutputDiv.innerHTML.trim() === 'Waiting for location updates...') {
+          watchOutputDiv.innerHTML = entryHtml;
+        } else {
+          watchOutputDiv.innerHTML = entryHtml + '<hr>' + watchOutputDiv.innerHTML;
+        }
       };
     </script>
   </body>
