added dark mode theme

--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
       </a>
     </div>
 
+    <div id="theme-toggle-wrapper">
+      <a id="theme-toggle" class="light" href="#" title="Toggle light / dark theme">
+        <span class="light-label">Light</span>
+        <div class="switch">
+          <div class="knob"></div>
+        </div>
+        <span class="dark-label">Dark</span>
+      </a>
+    </div>
+
     <button id="notifications">Notifications</button>
     <button id="location">Location</button>
     <button id="camera">Camera</button>
