add Window Management permission button

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <button id="pan-tilt-zoom">Pan-Tilt-Zoom</button>
     <button id="pan-tilt-zoom+microphone">Pan-Tilt-Zoom + Microphone</button>
     <button id="screenshare">Screen Share</button>
+    <button id="window-management">Window Management</button>
     <button id="midi">MIDI</button>
     <button id="midi+sysex">MIDI + SysEx</button>
     <button id="bluetooth">Bluetooth</button>
@@ -101,7 +102,7 @@
         <td>May succeed without permission depending on the implementation.<br>
           Attempts to use known key systems. (See the source for the list of supported key systems.)
           <!-- Clear Key is not supported because it is not expected to require permissions. -->
-        </td>
+          </td>
       </tr>
       <tr>
         <td>Async Clipboard</td>
